--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 
     <body>
         <h1>Recipes</h1>
+        <a href = ./food_recipes/furikakeGohan.html>Furikake Gohan</a>
     </body>
 </html>
