--- a/food_recipes/furikakeGohan.html
+++ b/food_recipes/furikakeGohan.html
@@ -1,10 +1,41 @@
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
-        <title>Furikake Gohan</title>
+        <title>Transforming Furikake Gohan</title>
     </head>
 
     <body>
-        <h1>Furikake Gohan</h1>
+        <h1>Transforming Furikake Gohan</h1>
+        <img src = '../images/furikake.jpg', alt="chicken don glazed with a luscious golden coating">
+        <h2> A delicious chicken don glazed with a luscious golden, egg coating</h2>
+
+        <p> An original take on the classical Furikake Gohan, made of dried ingredients like seaweed, sesame seeds, dried fish and many more.</p>
+
+        <div>
+            <h4> Ingredients</h4>
+            <ul>
+                <li>7 Chicken Wings</li>
+                <li>4 eggs</li>
+                <li>pinch of salt</li>
+                <li>Diced spring onion</li>
+                <li>1 tbs Sesame oil, Grated ginger, sake, mirin, sugar</li>
+                <li>700cc Bonito broth</li>
+                <li>50cc light soy sauce</li>
+            </ul>
+        </div>
+        <div>
+            <h4> Recipe Instructions</h4>
+            <ol>
+                <li> Heat sesame oil in frying pan and sauté chicken wings until golden brown on both sides</li>
+                <li> Put chicken wings, sesame oil, grated ginger, bonito broth, sake, mirin, sugar, light soy sauce into a pot and turn on high until it boils. Skim scum off
+                     top, reduce heat to low, and simmer until broth level is reduced by half
+                </li>
+                <li> Pour broth into a container to cool. Once cooled, place in refrigerator to chill and harden. Debone chicken wings and cut into strips.</li>
+                <li> Make the egg curds. Crack eggs into bowl, add sugar and a pinch of salt, and whisk. Pour into frying pan on low heat, stirring rapidly to create the curds. 
+                     Once done, move to plate.</li>
+                <li> Once broth cardens, remove from container and cut aspic into 1cm x 1cm squares.</li>
+                <li> Pour aspic, egg curds, and chicken strips over hot rice. Sprinkle with diced spring onion and enjoy!</li>
+            </ol>
+        </div>
     </body>
 </html>
